agora abre no vscode, etc blablablá

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </mark>
   </h1>
   <p>
-  <a href = "https://www.instagram.com/petinfouem/" title = "insta pet uem"> Clique aqui</a>
+  <a href = "https://www.instagram.com/petinfouem/" target=”_blank” title = "insta pet uem"> Clique aqui</a>
     para acessar o instagram do PET
   </p>
   <br>
