--- a/exemplo/index.html
+++ b/exemplo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel ="stylesheet" href="style.css"
+  <link rel ="stylesheet" href=".\assets\css\style.css"
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class = "center">
-    <img src = "https://i.imgur.com/Pvf3RQh.png" alt = "olá"/>
+    <img src = ".\assets\img\manoelgomes.webp" alt = "olá"/>
   </div>
   <h1>
     <mark class="um"> 
